# used_cars_dataset

./: .gitignore  README.md  check.py  claude_slides.qmd  claude_slides_updated.html  claude_slides_updated.qmd  notebook.ipynb  presentation.html  presentation.qmd  pyproject.toml  slides.html  slides.qmd
app/: app.py
docs/: presentation_2.html
models/: gbr_pipeline.joblib  preprocessor.joblib
preprocessing/notebooks/: notebook.ipynb  train_model.ipynb
reports/: slides.qmd
src/: preprocess.py  test.py  train.py  train_xgboost.py
