[project]
name = "used-cars-dataset"
version = "0.1.0"
description = "This is a project for used cars dataset, it will help us to analyze the data and make predictions, the project contains a notebook cleaning the dataset and making it ready for machine learning applications"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
