[project]
name = "used-cars-dataset"
version = "0.1.0"
description = "This is a project for used cars dataset, it will help us to analyze the data and make predictions, the project contains a notebook cleaning the dataset and making it ready for machine learning applications"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair<5",
    "category-encoders>=2.9.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.19.0",
]
